--- a/唐鞏.html
+++ b/唐鞏.html
@@ -12,7 +12,7 @@
    <h1 style= "color: red">唐鞏俱樂部</h1>
    <hr/>
    <h1>唐鞏俱樂部介紹</h1>
-   <h2>主打</h2>  
+   <h2>主打專業教學</h2>  
    
    <hr>
    <h1>成員</h1>
