更新1添加人員

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         <li><h2>蔡易呈(保送大葉大學兼職業運彩玩家)</h2></li>
             <img src="圖片/343928785_1456442631778660_8796405289029685333_n.jpg" width="400" height="400" >/
         <li><h2>林庭亦(彈奶頭大賽冠軍)</h2></li>
-            <img src="圖片/5423402D-4456-4B1E-BD54-0AE668FD9BA6.jpg" width="400" height="400" />
-        <li><h2>武馳澄(名子看起來不錯吃)</h2> </li>
+            <img src="圖片/354478079_1560322144494368_8486254679904312526_n.jpg" width="400" height="400" />
+        <li><h2>武馳橙(名子看起來不錯吃)</h2> </li>
             <img src="圖片/IMG_2094.JPG" width="400" height="400" />
         <li><h2>曾翊瑞(職業賭徒)</h2></li>
             <img src="圖片/345088442_1611836992659588_5185326108504124705_n.jpg" width="400" height="400" >/
-        
-        
- </body>
+        <li><h2>蕭永峻(加拿大流浪詩人)</h2></li>
+            <img src="圖片/327040305_854876279145568_1534982423680839644_n.jpg" width="400" height="400" >/   
+        <li><h2>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</h2></li>   
+            <img src="圖片/351470383_823140795900899_6645984876473061577_n.jpg" width="400" height="400"
+         </body>
 </html>
