圖片刊登錯誤

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         <li><h2>蕭永峻(加拿大流浪詩人)</h2></li>
             <img src="圖片/327040305_854876279145568_1534982423680839644_n.jpg" width="400" height="400" >/   
         <li><h2>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</h2></li>   
-            <img src="圖片/351470383_823140795900899_6645984876473061577_n.jpg" width="400" height="400"
+            <img src="圖片/336744886_605969004906286_1573626382927607561_n.jpg" width="400" height="400">/
          </body>
 </html>
