--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@
             <img src="圖片/327040305_854876279145568_1534982423680839644_n.jpg" width="400" height="400" >/   
         <li><h2>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</h2></li>   
             <img src="圖片/336744886_605969004906286_1573626382927607561_n.jpg" width="400" height="400">/
+        <li><h2>胡栩睿(練2天休3天的職業選手)</h2></li>
+            <img src="圖片/351436864_245734758163176_7685601880671721824_n.jpg" width="400" height="400">/
          </body>
 </html>
