--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>歡樂唐鞏俱樂部</title>
     <meta charset="utf-8" />
     <meta name="description" content="唐鞏游泳俱樂部,擁有多年游泳教學經驗並且有充分師資且具備奧運教練執照" />
     <meta name="author" content="海豹" />
     <meta name="keywords" content="游泳隊"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>歡樂唐鞏俱樂部</title>
+    <meta property="og:image" content="圖片/355060693_159780520424591_6473415017476564728_n.jpg" />
 </head>    
+
 <body style="background-color:#cccccc;">
    <h1 style= "color: red">唐鞏俱樂部</h1>
    <hr/>
