--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="海豹" />
     <meta name="keywords" content="游泳隊"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="圖片/355060693_159780520424591_6473415017476564728_n.jpg" />
+    <meta property="og:image" src="圖片/355060693_159780520424591_6473415017476564728_n.jpg" />
 </head>    
 
 <body style="background-color:#cccccc;">
