--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="海豹" />
     <meta name="keywords" content="游泳隊"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" src="圖片/355060693_159780520424591_6473415017476564728_n.jpg" />
+    <meta property="og:image" content="https://scontent.cdninstagram.com/v/t1.15752-9/355060693_159780520424591_6473415017476564728_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5a057b&_nc_ohc=qLF-IDpYjtMAX8jTAL5&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=03_AdQml8M3BigWuF6pIgfQTfQ8aPsKEyrDKeQawZKkczb2wg&oe=64B518BB" />
 </head>    
 
 <body style="background-color:#cccccc;">
