--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="海豹" />
     <meta name="keywords" content="游泳隊"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://scontent.cdninstagram.com/v/t1.15752-9/355060693_159780520424591_6473415017476564728_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5a057b&_nc_ohc=qLF-IDpYjtMAX8jTAL5&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=03_AdQml8M3BigWuF6pIgfQTfQ8aPsKEyrDKeQawZKkczb2wg&oe=64B518BB" />
+    <link rel="stylesheet" href="tmsc.css" />
 </head>    
 
 <body style="background-color:#cccccc;">
@@ -18,33 +18,29 @@
    
    <hr>
    <h1>成員</h1>
-   <ul>
-    <table>
-        <tr>
+  
 
-        <li> <h2>吳彥鞏(俱樂部創始人)</h2></li>
+        <p>吳彥鞏(俱樂部創始人)</p>
             <img src="圖片/IMG_2182.JPEG" width="400" height="400" /> 
-        <li><h2>蕭丞硯(美食博主)</h2></li>
+        <p>蕭丞硯(美食博主)</p>
             <img src="圖片/IMG_1890.JPG" width="400" height="400" />
-        </tr>
-
-        <li><h2>蕭詠文(大仁扛霸子)</h2></li>
+        <p>蕭詠文(大仁扛霸子)</p>
             <img src="圖片/IMG_1762.jpeg" width="400" height="400" />
-        <li><h2>許祐睿(勃起障礙)</h2></li>
+        <p>許祐睿(勃起障礙)</p>
             <img  src="圖片/344581660_185962764365686_7711290348659582784_n.jpg" width="400" height="400" >/ 
-        <li><h2>蔡易呈(保送大葉大學兼職業運彩玩家)</h2></li>
+        <p>蔡易呈(保送大葉大學兼職業運彩玩家)</p>
             <img src="圖片/343928785_1456442631778660_8796405289029685333_n.jpg" width="400" height="400" >/
-        <li><h2>林庭亦(彈奶頭大賽冠軍)</h2></li>
+        <p>林庭亦(彈奶頭大賽冠軍)</p>
             <img src="圖片/354478079_1560322144494368_8486254679904312526_n.jpg" width="400" height="400" />
-        <li><h2>武馳橙(名子看起來不錯吃)</h2> </li>
+        <p>武馳橙(名子看起來不錯吃)</p>
             <img src="圖片/IMG_2094.JPG" width="400" height="400" />
-        <li><h2>曾翊瑞(職業賭徒)</h2></li>
+        <p>曾翊瑞(職業賭徒)</p>
             <img src="圖片/345088442_1611836992659588_5185326108504124705_n.jpg" width="400" height="400" >/
-        <li><h2>蕭永峻(加拿大流浪詩人)</h2></li>
+        <p>蕭永峻(加拿大流浪詩人)</p>
             <img src="圖片/327040305_854876279145568_1534982423680839644_n.jpg" width="400" height="400" >/   
-        <li><h2>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</h2></li>   
+        <p>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</p>
             <img src="圖片/336744886_605969004906286_1573626382927607561_n.jpg" width="400" height="400">/
-        <li><h2>胡栩睿(練2天休3天的職業選手)</h2></li>
+        <p>胡栩睿(練2天休3天的職業選手)</p>
             <img src="圖片/351436864_245734758163176_7685601880671721824_n.jpg" width="400" height="400">/
          </body>
 </html>
