--- a/index.html
+++ b/index.html
@@ -8,39 +8,65 @@
     <meta name="keywords" content="游泳隊"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="tmsc.css" />
-</head>    
+</head>
 
 <body style="background-color:#cccccc;">
-   <h1 style= "color: red">唐鞏俱樂部</h1>
-   <hr/>
-   <h1>唐鞏俱樂部介紹</h1>
-   <h2>主打專業教學</h2>  
-   
-   <hr>
-   <h1>成員</h1>
-  
+    <h1 style="color: red">唐鞏俱樂部</h1>
+    <hr />
+    <h1>唐鞏俱樂部介紹</h1>
+    <h2>主打專業教學</h2>
+    <hr>
+    <h1>成員</h1>
 
-        <p>吳彥鞏(俱樂部創始人)</p>
-            <img src="圖片/IMG_2182.JPEG" width="400" height="400" /> 
-        <p>蕭丞硯(美食博主)</p>
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>吳彥鞏(俱樂部創始人)</p>
+            <img src="圖片/IMG_2182.JPEG" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>蕭丞硯(美食博主)</p>
             <img src="圖片/IMG_1890.JPG" width="400" height="400" />
-        <p>蕭詠文(大仁扛霸子)</p>
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>蕭詠文(大仁扛霸子)</p>
             <img src="圖片/IMG_1762.jpeg" width="400" height="400" />
-        <p>許祐睿(勃起障礙)</p>
-            <img  src="圖片/344581660_185962764365686_7711290348659582784_n.jpg" width="400" height="400" >/ 
-        <p>蔡易呈(保送大葉大學兼職業運彩玩家)</p>
-            <img src="圖片/343928785_1456442631778660_8796405289029685333_n.jpg" width="400" height="400" >/
-        <p>林庭亦(彈奶頭大賽冠軍)</p>
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>許祐睿(勃起障礙)</p>
+            <img src="圖片/344581660_185962764365686_7711290348659582784_n.jpg" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>蔡易呈(保送大葉大學兼職業運彩玩家)</p>
+            <img src="圖片/343928785_1456442631778660_8796405289029685333_n.jpg" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>林庭亦(彈奶頭大賽冠軍)</p>
             <img src="圖片/354478079_1560322144494368_8486254679904312526_n.jpg" width="400" height="400" />
-        <p>武馳橙(名子看起來不錯吃)</p>
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>武馳橙(名子看起來不錯吃)</p>
             <img src="圖片/IMG_2094.JPG" width="400" height="400" />
-        <p>曾翊瑞(職業賭徒)</p>
-            <img src="圖片/345088442_1611836992659588_5185326108504124705_n.jpg" width="400" height="400" >/
-        <p>蕭永峻(加拿大流浪詩人)</p>
-            <img src="圖片/327040305_854876279145568_1534982423680839644_n.jpg" width="400" height="400" >/   
-        <p>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</p>
-            <img src="圖片/336744886_605969004906286_1573626382927607561_n.jpg" width="400" height="400">/
-        <p>胡栩睿(練2天休3天的職業選手)</p>
-            <img src="圖片/351436864_245734758163176_7685601880671721824_n.jpg" width="400" height="400">/
-         </body>
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>曾翊瑞(職業賭徒)</p>
+            <img src="圖片/345088442_1611836992659588_5185326108504124705_n.jpg" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>蕭永峻(加拿大流浪詩人)</p>
+            <img src="圖片/327040305_854876279145568_1534982423680839644_n.jpg" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>曹亦閎(花蓮農民會兼台灣地震鎮壓協會主席)</p>
+            <img src="圖片/336744886_605969004906286_1573626382927607561_n.jpg" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>胡栩睿(練2天休3天的職業選手)</p>
+            <img src="圖片/351436864_245734758163176_7685601880671721824_n.jpg" width="400" height="400" />
+        </div>
+        <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
+            <p>bas(臭原p)</p>
+            <img src="圖片/359674995_317210227637139_6282486830882025560_n.jpg" width="400" height="400" />
+        </div>
+    </div>
+</body>
 </html>
