--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
     <link rel="stylesheet" href="tmsc.css" />
 </head>
 
-<body style="background-color:#cccccc;">
+<body>
     <h1 style="color: red">唐鞏俱樂部</h1>
     <hr />
     <h1>唐鞏俱樂部介紹</h1>
     <h2>主打專業教學</h2>
     <hr>
     <h1>成員</h1>
-
-    <div>
-        <a href="https://l.instagram.com/?u=https%3A%2F%2Fscontent.xx.fbcdn.net%2Fv%2Ft1.15752-9%2F363852104_1307876096601435_4920752064931030280_n.jpg%3Fstp%3Ddst-jpg_s403x403%26_nc_cat%3D102%26ccb%3D1-7%26_nc_sid%3Daee45a%26_nc_ohc%3DXvP9MvjhHXkAX99to3_%26_nc_ad%3Dz-m%26_nc_cid%3D0%26_nc_ht%3Dscontent.xx%26oh%3D03_AdSTwg-HeF9VksYEtpDj_jw8GxTcIYmuHuGjNcb5thos2A%26oe%3D64F866E3&e=AT07fAod9pt0sw5CTUjN0XXoEyyF5zGX4X4RPXnD7lWIErENqtsCzZ9Oha9pXgauso2spDSUoTcdhS4N1n9MKUiVt9KVoSfoVhFuEA49E90KigaSXc6O-hwx6HUd8c8VE8VesWLKRvlMRxeKyRn6jw">
-            <img src="https://l.instagram.com/?u=https%3A%2F%2Fscontent.xx.fbcdn.net%2Fv%2Ft1.15752-9%2F363852104_1307876096601435_4920752064931030280_n.jpg%3Fstp%3Ddst-jpg_s403x403%26_nc_cat%3D102%26ccb%3D1-7%26_nc_sid%3Daee45a%26_nc_ohc%3DXvP9MvjhHXkAX99to3_%26_nc_ad%3Dz-m%26_nc_cid%3D0%26_nc_ht%3Dscontent.xx%26oh%3D03_AdSTwg-HeF9VksYEtpDj_jw8GxTcIYmuHuGjNcb5thos2A%26oe%3D64F866E3&e=AT07fAod9pt0sw5CTUjN0XXoEyyF5zGX4X4RPXnD7lWIErENqtsCzZ9Oha9pXgauso2spDSUoTcdhS4N1n9MKUiVt9KVoSfoVhFuEA49E90KigaSXc6O-hwx6HUd8c8VE8VesWLKRvlMRxeKyRn6jw" alt="https://l.instagram.com/?u=https%3A%2F%2Fscontent.xx.fbcdn.net%2Fv%2Ft1.15752-9%2F363852104_1307876096601435_4920752064931030280_n.jpg%3Fstp%3Ddst-jpg_s403x403%26_nc_cat%3D102%26ccb%3D1-7%26_nc_sid%3Daee45a%26_nc_ohc%3DXvP9MvjhHXkAX99to3_%26_nc_ad%3Dz-m%26_nc_cid%3D0%26_nc_ht%3Dscontent.xx%26oh%3D03_AdSTwg-HeF9VksYEtpDj_jw8GxTcIYmuHuGjNcb5thos2A%26oe%3D64F866E3&e=AT07fAod9pt0sw5CTUjN0XXoEyyF5zGX4X4RPXnD7lWIErENqtsCzZ9Oha9pXgauso2spDSUoTcdhS4N1n9MKUiVt9KVoSfoVhFuEA49E90KigaSXc6O-hwx6HUd8c8VE8VesWLKRvlMRxeKyRn6jw" width="400" height="400" />
-        </a>
-    </div>
 
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
         <div style="flex-basis: calc(33.33% - 20px); margin-bottom: 20px;">
